<resources>
    <string name="app_name">Lab4Media</string>
    <string name="ok">OK</string>
    <string name="audio">Play audio</string>
    <string name="video">Play video</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="alarm">Alarm sounds</string>
    <string name="miaow">Miaow sounds</string>

</resources>
